--- a/app/src/main/res/layout/movie_title.xml
+++ b/app/src/main/res/layout/movie_title.xml
@@ -20,7 +20,8 @@
         style="?android:attr/ratingBarStyleSmall"
         android:id="@+id/rb_vote_average"
         android:numStars="10"
-        android:stepSize="0.1"/>
+        android:stepSize="0.1"
+        android:theme="@style/RatingBar"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
