--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,6 +4,7 @@
     <item
         android:id="@+id/action_search"
         android:icon="@drawable/ic_action_search"
-        android:title="@string/ab_search"
-        app:showAsAction="always"/>
-</menu>
+        android:title="@string/srch"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="ifRoom|collapseActionView" />
+    </menu>
