--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,7 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <!--Style used on Ratting Bars-->
     <style name="RatingBar" parent="Theme.AppCompat">
         <item name="colorControlNormal">@color/colorBlue</item>
         <item name="colorControlActivated">@color/colorBlueLight</item>
