--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorBlack">#000</color>
     <color name="colorBlue">#1573a9</color>
     <color name="colorBlueLight">#419afa</color>
+    <color name="colorGray">#d1d0d0</color>
 </resources>
