--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -23,7 +23,7 @@
     <!--<include layout="@layout/content_main" />-->
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/fragment_container"
         android:layout_marginTop="?attr/actionBarSize"
         android:background="@color/colorGray"/>
