--- a/app/src/main/res/layout/fragment_movie_entry.xml
+++ b/app/src/main/res/layout/fragment_movie_entry.xml
@@ -1,42 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/border"
+    android:layout_margin="2dp"
+    android:orientation="horizontal"
+    android:gravity="top">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/border"
-        android:layout_margin="2dp">
         <ImageView
             android:id="@+id/iv_poster"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_image_photo"
-            android:padding="5dp" />
+            android:layout_weight="0.4"
+            android:adjustViewBounds="true"/>
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_toRightOf="@+id/iv_poster">
+            android:layout_weight="0.6">
 
             <include layout="@layout/movie_title" />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:textSize="18sp"
+                android:id="@+id/tv_overview"
+                android:layout_gravity="bottom" />
+
         </LinearLayout>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingStart="5dp"
-            android:paddingEnd="5dp"
-            android:paddingBottom="5dp"
-            android:ellipsize="end"
-            android:maxLines="3"
-            android:textSize="20sp"
-            android:id="@+id/tv_overview"
-            android:layout_alignParentBottom="true"
-            android:layout_toRightOf="@+id/iv_poster"/>
-    </RelativeLayout>
+
+    </LinearLayout>
 
 
-</RelativeLayout>
